[metadata]
name = generate_endpoints_markdown_document 
version = 0.1.0

[options.entry_points]
console_scripts = 
    generate_endpoints_markdown_document = generate_endpoints_markdown_document.generate_endpoints_markdown_document:main

[options]
packages = find:
install_requires =
    nslookup
    jinja2
    tabulate
include_package_data = true

[options.package_data]
* = templates/*.jj2
